--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.79",
     "bootstrap": "^5.3.3",
+    "fast-deep-equal": "^3.1.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
