--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "^0.9.79",
+    "@vuepic/vue-datepicker": "^8.7.0",
     "bootstrap": "^5.3.3",
     "fast-deep-equal": "^3.1.3",
     "vue": "^3.4.21",
